# libgeodesk

./: CMakeLists.txt  NOTICE  README.md
doc/: Doxyfile  mainpage.md
doc/releases/: v1.0.0.md
examples/: CMakeLists.txt
examples/admin-areas/: CMakeLists.txt  main.cpp
examples/hotel_stats/: CMakeLists.txt  main.cpp
examples/perf-test/: CMakeLists.txt  main.cpp
examples/tag_stats/: CMakeLists.txt  main.cpp
include/clarisma/: common.h
include/clarisma/alloc/: Arena.h  ArenaPool.h  ArenaStack.h  Block.h  ChunkChain.h  ReusableBlock.h  SimpleArena.h
include/clarisma/cli/: CliApplication.h  CliCommand.h  CliCommandConfigurator.h  CliHelp.h  Console.h  ConsoleWriter.h
include/clarisma/compile/: unreachable.h
include/clarisma/data/: CompactHashTable.h  Deduplicator.h  FixedQueue.h  Linked.h  Lookup.h  LookupBase.h  SimpleLinkedList.h  Span.h  StringLookup.h  StringSet.h
include/clarisma/io/: ExpandableMappedFile.h  File.h  FileBuffer2.h  FileLock.h  FileSystem.h  FileWriter.h  IOException.h  MappedFile.h
include/clarisma/math/: Decimal.h  Math.h
include/clarisma/store/: BlobPtr.h  BlobStore.h  BlobStore_v2.h  IndexFile.h  PileFile.h  Store.h  Store_v2.h
include/clarisma/sys/: SystemInfo.h
include/clarisma/text/: Format.h  Highlighter.h
include/clarisma/thread/: Phaser.h  ProgressReporter.h  TaskEngine.h  TaskQueue.h  TaskStatus.h  ThreadPool.h  Threads.h
include/clarisma/util/: BitIterator.h  Bits.h  Buffer.h  BufferWriter.h  Bytes.h  ChunkedBuffer.h  Crc32.h  DataPtr.h  DateTime.h  DynamicStackBuffer.h  EncodedVarint.h  Format.h  MutableDataPtr.h  NearPtr.h  Parcel.h  Parser.h  PbfDecoder.h  Pointers.h  PunnedPtr.h  QuickSelect.h  RefCounted.h  ShortVarString.h  StreamWriter.h  StringBuilder.h  Strings.h  TaggedPtr.h  UUID.h  exception.h  log.h  pointer.h  protobuf.h  sorting.h  varint.h
include/clarisma/validate/: Validate.h
include/geodesk/: export.h  geodesk.h
include/geodesk/api/: Feature.h  Features.h  Node.h  Relation.h  Way.h
include/geodesk/feature/: AbstractFeatureTableIterator.h  AbstractTagIterator.h  FastMemberIterator.h  FeatureBase.h  FeatureBase_impl.h  FeatureHeader.h  FeatureIterator.h  FeatureIteratorBase.h  FeatureNodeIterator.h  FeaturePtr.h  FeatureStore.h  FeatureStore_v2.h  FeatureType.h  FeatureTypes.h  FeatureUtils.h  Features.h  FeaturesBase.h  FeaturesBase_impl.h  ForeignFeatureRef.h  GlobalTagIterator.h  Key.h  KeyIndexSchema.h  LocalTagIterator.h  MemberCollection.h  MemberIterator.h  MemberTableIterator.h  NodePtr.h  NodeTableIterator.h  Nodes.h  ParentRelationIterator.h  QueryException.h  RelationPtr.h  RelationTableIterator.h  RelationTablePtr.h  Relations.h  StringTable.h  StringValue.h  Tag.h  TagIterator.h  TagTablePtr.h  (+13 more)
include/geodesk/filter/: AreaFilter.h  ComboFilter.h  ConnectedFilter.h  ContainsPointFilter.h  CrossesFilter.h  FeatureNodeFilter.h  Filter.h  Filters.h  IntersectsFilter.h  LengthFilter.h  PointDistanceFilter.h  PredicateFilter.h  PreparedFilterFactory.h  PreparedSpatialFilter.h  SpatialFilter.h  WayNodeFilter.h  WithinFilter.h
include/geodesk/format/: FeatureWriter.h  GeoJsonWriter.h  GeometryWriter.h  WktWriter.h
include/geodesk/geom/: Area.h  Box.h  Centroid.h  Coordinate.h  Distance.h  GeometryBuilder.h  Length.h  LonLat.h  (+6 more)
src/feature/: FastMemberIterator.cpp  FeatureIteratorBase.cpp  FeatureNodeIterator.cpp  FeaturePtr.cpp  FeatureStore.cpp  FeatureStore_v2.cpp  FeatureUtils.cpp  MemberCollection.cpp  MemberIterator.cpp  ParentRelationIterator.cpp  StringTable.cpp  TagIterator.cpp  TagTablePtr.cpp  TagValue.cpp  Tags.cpp  WayCoordinateIterator.cpp
src/filter/: ComboFilter.cpp  ConnectedFilter.cpp  ContainsPointFilter.cpp  CrossesFilter.cpp  FeatureNodeFilter.cpp  Filter.cpp  Filters.cpp  IntersectsFilter.cpp  PointDistanceFilter.cpp  PreparedFilterFactory.cpp  PreparedSpatialFilter.cpp  SpatialFilter.cpp  WayNodeFilter.cpp  WithinFilter.cpp
src/format/: FeatureWriter.cpp  GeoJsonWriter.cpp  GeometryWriter.cpp  WktWriter.cpp
src/geom/: Area.cpp  Box.cpp  Centroid.cpp  Distance.cpp  GeometryBuilder.cpp  LambertArea.cpp  LambertArea.h  Length.cpp  LengthUnit.cpp  LineSegment.cpp  OmtTreeBuilder.cpp  OmtTreeBuilder.h  Tile.cpp  algorithms.cpp  algorithms.h
src/match/: Matcher.cpp  MatcherCoder.h  MatcherCompiler.cpp  MatcherDecoder.cpp  MatcherDecoder.h  MatcherEmitter.cpp  MatcherEmitter.h  MatcherEngine.cpp  MatcherEngine.h  MatcherParser.cpp  MatcherParser.h  MatcherValidator.cpp  MatcherValidator.h  OpGraph.cpp  OpGraph.h  Selector.cpp  Selector.h  TagClause.cpp  TagClause.h
src/query/: Query.cpp  TileIndexWalker.cpp  TileQueryTask.cpp
test/: Features_test.cpp  test_concur.cpp
test/geom/: Tile_test.cpp
(+84 files in other folders)
